improved presentation of time

--- a/commute_together/commute_together/templates/home.html
+++ b/commute_together/commute_together/templates/home.html
@@ -7,6 +7,6 @@
 	</form>
 
 	{% for item in appointments %}
-		<span><a href="/meeting/{{item.id}}">{{item.name}}</a>:{{item.date}}</span>
+		<div><a href="/meeting/{{item.id}}">{{item.name}}</a>:{{item.date}}</div>
 	{% endfor %}
 {% endblock %}
