--- a/commute_together/commute_together/templates/base.html
+++ b/commute_together/commute_together/templates/base.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	{% load staticfiles %}
 	<title>{% block title %} {% endblock %}</title>
-
+	<link rel="stylesheet" type="text/css" href="{% static 'jquery.datetimepicker.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
 </head>
 <body>
 
 	{% block content %} 
 	{% endblock %}
 
-	{% load staticfiles %}
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery.min.js"></script>
 
-	<script type="text/javascript" src="{% static 'jquery.autocomplete.js' %}"></script>
-	<script>
-		$(document).ready(function() {
-
-			$("#id_name").autocomplete({
-				serviceUrl: '/meeting/api/station_name_hints/',
-				width: 50,
-				onSelect: function(data, value){}
-				
-			});
-
-		});
-	</script>
+{% block script %}
+{% endblock %}
 </body>
+
 </html>
