--- a/commute_together/commute_together/static/style.css
+++ b/commute_together/commute_together/static/style.css
@@ -4,3 +4,13 @@
 .autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
 .autocomplete-group { padding: 2px 5px; }
 .autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+
+.label{
+	font-size: 100%;
+	display: block;
+	padding: 6px 12px;
+}
+
+.jumbotron h1{
+	text-align: center;
+}
