--- a/commute_together/commute_together/templates/new_meeting.html
+++ b/commute_together/commute_together/templates/new_meeting.html
@@ -2,16 +2,61 @@
 
 {% block title %}New meeting{% endblock %}
 {% block content %}
-	<form action="/meeting/new/" method="POST">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<input type="submit" value="Add appointment">
-	</form>
+<div class="container">
 
+	<h1>New appointment</h1>
+
+	<div class="row">
+		<div class="col-md-2">
+			<a href="/meeting/"class="btn btn-default" type="submit">Back </a>
+		</div>
+	</div>
+
+	<form action="/meeting/new/" method="POST" role="form" class="form-horizontal">
+		{% csrf_token %}
+		
+			<div class="form-group">
+				{{ form.name.errors }}
+				{{ form.name.label_tag }} 
+				{{ form.name }}
+			</div>
+
+			<div class="row">
+				<div class="form-group col-sm-5">
+					{{ form.date.errors }}
+					{{ form.date.label_tag }} 
+					{{ form.date }}
+				</div>
+				<div class="col-sm-2"></div>
+				<div class="form-group  col-sm-5">
+					{{ form.place.errors }}
+					{{ form.place.label_tag }} 
+					{{ form.place }}
+				</div>
+			</div>
+
+			<div class="form-group">
+				{{ form.desc.errors }}
+				{{ form.desc.label_tag }} 
+				{{ form.desc }}
+			</div>
+
+		<div class="form-group">
+			<div class="col-sm-12">
+				<input class="btn btn-default" type="submit" value="Add appointment">
+			</div>
+		</div>
+	</form>
+</div>
 {% endblock %}
 
 {% block script %}
 	<script>
+		$(document).ready(function() {
+			$('input').addClass("form-control");
+			$('textarea').addClass("form-control");
+			$('textarea').attr("row", "5");
+		}); 
 
 		$(document).ready(function() {
 
