--- a/commute_together/commute_together/templates/home.html
+++ b/commute_together/commute_together/templates/home.html
@@ -11,7 +11,10 @@
 			<a href="/meeting/new/"class="btn btn-default" type="submit">New appointment </a>
 		</div>
 		<div class="col-md-2">
-			<a href="/meeting/schedule/"class="btn btn-default" type="submit">Suburban trains schedule</a>
+			<a href="/meeting/schedule/" class="btn btn-default" type="submit">Suburban trains schedule</a>
+		</div>
+		<div class="col-md-2">
+			<a href="http://oauth.vk.com/authorize?client_id={{client_id}}&scope=email,offline&redirect_uri=dimawittmann.pythonanywhere.com/meeting/vklogin&response_type=code&v=5.34" class="btn btn-default" title="Зайти через ВКонтакте">Зайти через ВКонтакте</a>
 		</div>
 	</div>
 	</br>
