implemented vk oatuh

--- a/commute_together/commute_together/templates/home.html
+++ b/commute_together/commute_together/templates/home.html
@@ -14,7 +14,7 @@
 			<a href="/meeting/schedule/" class="btn btn-default" type="submit">Suburban trains schedule</a>
 		</div>
 		<div class="col-md-2">
-			<a href="http://oauth.vk.com/authorize?client_id={{client_id}}&scope=email,offline&redirect_uri=dimawittmann.pythonanywhere.com/meeting/vklogin&response_type=code&v=5.34" class="btn btn-default" title="Зайти через ВКонтакте">Зайти через ВКонтакте</a>
+			<a href="http://oauth.vk.com/authorize?client_id={{client_id}}&scope=email,offline&redirect_uri=http://dimawittmann.pythonanywhere.com/meeting/vklogin&response_type=code&v=5.34" class="btn btn-default" class="btn btn-info" title="Зайти через ВКонтакте">Зайти через ВКонтакте</a>
 		</div>
 	</div>
 	</br>
