--- a/commute_together/commute_together/templates/base.html
+++ b/commute_together/commute_together/templates/base.html
@@ -9,6 +9,13 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
 </head>
 <body>
+	{% if messages %}
+	<ul class="messages">
+		{% for message in messages %}
+		<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+		{% endfor %}
+	</ul>
+	{% endif %}
 
 	{% block content %} 
 	{% endblock %}
