add filters(date, departmant_station, friends)  to home board

--- a/commute_together/commute_together/templates/base.html
+++ b/commute_together/commute_together/templates/base.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'jquery.datetimepicker.css' %}"/>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
-	<script src="http://vk.com/js/api/openapi.js"; type="text/javascript" charset="windows-1251"></script>
+	<script src="http://vk.com/js/api/openapi.js" type="text/javascript" charset="windows-1251"></script>
+	<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript" charset="windows-1251"></script>
 </head>
 <body>
 	{% if messages %}
