--- a/commute_together/commute_together/templates/new_meeting.html
+++ b/commute_together/commute_together/templates/new_meeting.html
@@ -72,25 +72,23 @@
 			$('input').addClass("form-control");
 			$('textarea').addClass("form-control");
 			$('textarea').attr("row", "5");
+			$('#id_date').attr('autocomplete', 'off');
 		}); 
 
 		$(document).ready(function() {
 
 			$("#id_place").autocomplete({
-				serviceUrl: '/meeting/api/station_name_hints/',
+				serviceUrl: '{% url "station_name_hints" %}',
 				width: 150,
 				onSelect: function(data, value){}
 
 			});
-
-		});
-
-		$(document).ready(function() {
 			$('#id_date').datetimepicker({
 				format: 'Y-m-d H:i'
 			});
-			$('#id_date').attr('autocomplete', 'off');
+
 		});
+
 
 	</script>
 {% endblock %}
