refactore output of dates

--- a/commute_together/commute_together/templates/home.html
+++ b/commute_together/commute_together/templates/home.html
@@ -54,7 +54,7 @@
 		});
 
 		$('#id_date').datetimepicker({
-			format: 'd-m-Y H:i'
+			format: '{{DATETIME_FORMAT}}'
 		});
 
 		$('#id_date,#from_station').on('focusout', function(event){
