--- a/commute_together/commute_together/templates/meeting.html
+++ b/commute_together/commute_together/templates/meeting.html
@@ -9,7 +9,7 @@
 
 		<div class="row">
 			<div class="col-sm-1 label label-default">When:</div>
-			<div class="col-sm-offset-1 col-sm-4 well">{{meeting.date}}</div>
+			<div class="col-sm-offset-1 col-sm-4 well">{{meeting.date | date:DATETIME_FORMAT}}</div>
 		</div>
 
 		<div class="row">
@@ -46,103 +46,4 @@
 		VK.Widgets.Like('vk_like', {'type': 'button'});
 	</script>
 
-	<script>
-
-		$(document).ready(function() {
-			$('label').addClass('control-label col-sm-2');
-			$('input').addClass('form-control');
-			$('textarea').addClass('form-control');
-		}); 
-
-/////////////////////////////////////////////////////
-		//csrf managing
-		// This function gets cookie with a given name
-		function getCookie(name) {
-			var cookieValue = null;
-			if (document.cookie && document.cookie != '') {
-				var cookies = document.cookie.split(';');
-				for (var i = 0; i < cookies.length; i++) {
-					var cookie = jQuery.trim(cookies[i]);
-					// Does this cookie string begin with the name we want?
-					if (cookie.substring(0, name.length + 1) == (name + '=')) {
-						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-						break;
-					}
-				}
-			}
-			return cookieValue;
-		}
-		var csrftoken = getCookie('csrftoken');
-		 
-		/*
-		The functions below will create a header with csrftoken
-		*/
-		 
-		function csrfSafeMethod(method) {
-			// these HTTP methods do not require CSRF protection
-			return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-		}
-		function sameOrigin(url) {
-			// test that a given url is a same-origin URL
-			// url could be relative or scheme relative or absolute
-			var host = document.location.host; // host + port
-			var protocol = document.location.protocol;
-			var sr_origin = '//' + host;
-			var origin = protocol + sr_origin;
-			// Allow absolute or scheme relative URLs to same origin
-			return (url == origin || url.slice(0, origin.length + 1) == origin + '/') ||
-				(url == sr_origin || url.slice(0, sr_origin.length + 1) == sr_origin + '/') ||
-				// or any other URL that isn't scheme relative or absolute i.e relative.
-				!(/^(\/\/|http:|https:).*/.test(url));
-		}
-		 
-		$.ajaxSetup({
-			beforeSend: function(xhr, settings) {
-				if (!csrfSafeMethod(settings.type) && sameOrigin(settings.url)) {
-					// Send the token to same-origin, relative URLs only.
-					// Send the token only if the method warrants CSRF protection
-					// Using the CSRFToken value acquired earlier
-					xhr.setRequestHeader("X-CSRFToken", csrftoken);
-				}
-			}
-		});
-//////////////////////////////////////////////
-
-
-
-		function create_comment(){
-			$.ajax({
-				url: "/meeting/api/add_comment/",
-				type:"POST",
-				data: {
-					meeting_id: {{ meeting.id }},
-					author_name: $('#id_author_name').val(),
-					comment: $('#id_comment').val()
-				},
-
-				success: function(json) {
-					var comment = $('<div class="panel panel-default">'+
-							'<div class="panel-heading"><div>'+json.author_name+'</div>'+
-							'<div class="panel-body">'+json.comment+ '</br>'+json.date +'</div>'+
-							'</div>'+
-						'</div>');
-
-					comment.hide();
-					$('#comments').prepend(comment);
-					comment.show('slow')
-
-				},
-
-				error: function(xhr, errmsg, err) {
-					console.log(xhr.status + ": " + xhr.responseText)
-				}
-			});
-		};
-
-		$("#id_form").on('submit', function(event){
-			event.preventDefault();
-			create_comment();
-		});
-
-	</script>
 {% endblock %}
