--- a/commute_together/commute_together/templates/schedule.html
+++ b/commute_together/commute_together/templates/schedule.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-2">
-			<a href="/meeting/"class="btn btn-default" type="submit">Back </a>
+			<a href="{% url 'home' %}"class="btn btn-default" type="submit">Back </a>
 		</div>
 	</div>
 	</br>
